aor-cli: clean native-image cleanup + accurate backend label
- Bundle.closeQuietly + guarded closes in prove/verify: the proving-key store's
  shared mmap Arena can't be closed in a GraalVM native image (shared-arena close
  disabled), which threw *after* a successful prove/verify. Swallow it — the OS
  reclaims the mapping on exit. On the JVM, close still frees it normally.
- prove now logs the backend actually used (java when routed in a native image),
  not the requested one.
- ADR-0001: document both distributions (fat-jar + native binary) and the native
  blst-via-FFM limitation.

Native binary confirmed: valid proof + self-check PASS on the real 19M circuit
(pure-Java, ~11.5 min), off-chain verify ~0.14s.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>